2011-10-14  Xavier Perseguers  <xavier@causal.ch>

	* [TASK][DOC] Fix reST documentation for better PDF output

2011-10-13  Xavier Perseguers  <xavier@causal.ch>

	* [TASK][DOC] Enhance tables with simplified syntax (thanks to Martin Bless)
	* [TASK][DOC] Add markers and subparts
	* [TASK][DOC] Add Domain Model
	* [TASK][DOC] Add chapter Administration
	* [TASK][DOC] Add chapter Tutorial, Developer manual, Known problems and To-Do list
	* [TASK][DOC] Initiate conversion to reStructuredText
	* [TASK][DOC] Fix paragraph styles for better HTML rendering on typo3.org

2011-10-02  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Remove default WSDL end point

2011-09-19  Xavier Perseguers  <xavier@causal.ch>

	* [BUGFIX] #30007: Caching is much less efficient in TYPO3 4.6

2011-09-12  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Update jQuery reference

2011-09-08  Xavier Perseguers  <xavier@causal.ch>

	* [BUGFIX] New CE wizards are not compatible with language dependencies when using TYPO3 4.6

2011-09-07  Xavier Perseguers  <xavier@causal.ch>

	* [FEATURE] Add hooks after SOAP pre-processing

2011-08-31  Xavier Perseguers  <xavier@causal.ch>

	* [BUGFIX] Invalid ll-XML reference for plugin wizards when using TYPO3 4.6

2011-08-29  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Use an official version number
	* [TASK] Use EXT:xliff instead of manually crafted class.ext_update.php

2011-08-26  Xavier Perseguers  <xavier@causal.ch>

	* [BUGFIX] #29262: XLIFF: Approved attribute is on wrong element

2011-08-25  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] #29255: Use XLIFF as new translation format

2011-08-24  Xavier Perseguers  <xavier@causal.ch>

	* [BUGFIX] #29207: Cleanup task crashes if web service does not exist
	* [TASK] Reintroduce subcategory "API" in Extension Manager

2011-08-17  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Add proper fallback between version 1.0 and version 2.0
	* [BUGFIX] Pi1 FlexForm crashes in backend
