@@ -1,4 +1,16 @@
 ************************************************************************
+CHANGES & IMPROVEMENTS between egovapi 1.4 and 1.5
+(for technical details see ChangeLog)
+************************************************************************
+
+=== Caching Framework ===
+
+	The caching framework tables have been renamed to match the
+	convention in TYPO3 4.6. Make sure to visit the Extension
+	Manager and re-create the tables accordingly if using TYPO3 4.5
+	or below.
+
+************************************************************************
 CHANGES & IMPROVEMENTS between egovapi 1.3 and 1.4
 (for technical details see ChangeLog)
 ************************************************************************
